# QA_bot_hackathon

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  docker.yml
bleurt-service/: Dockerfile  app.py  requirements.txt
dev-files_and_final_bench/: DEPLOYMENT.md  example_env  final_version(no_llm_rerank).xlsx
src/app/: bleurt-service.py  front.py  server.py
src/app/static/: index.html  index.py
src/data/: base_triplets.xlsx  benchmark_results.xlsx  chunks.jsonl  embeddings.npy  faiss.index  kb.json
src/llm/: llm_chat_bot_ollama.py  llm_reranker_vllm.py
src/pipeline/: orchestrator.py
src/prompts/llm_reranking/: system.txt  user.txt
src/prompts/llm_response/: system.txt  user.txt
src/retriever/: __init__.py  bleurt_mertics.py  metrics.py  semantic_search.py
src/schemas/: pydantic_schemas.py
src/utils/: file_loader.py
tests/: conftest.py  test_metrics.py  test_pipeline.py  test_schemas.py
